--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.application.name=system
 server.servlet.context-path=/system
 server.port=9001
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
+
+#database connection
+spring.datasource.url=jdbc:mysql://localhost:3306/courseimooc?characterEncoding=UTF8&autoReconnect=true
+spring.datasource.username=courseimooc
+spring.datasource.password=199511haO.
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
