--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -4,7 +4,10 @@ server.port=9001
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
 
 #database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/courseimooc?characterEncoding=UTF8&autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/course-imooc?characterEncoding=UTF8&autoReconnect=true
 spring.datasource.username=courseimooc
 spring.datasource.password=199511haO.
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#Mapper path
+mybatis.mapper-locations=classpath:/mapper/*.xml
