add devtools to system microservice 1. add devtools jar to pom.xml 2. setting compiler: set compile automatically 3. double shift input "registry", check "compiler.automake.allow.when.app.running"

--- a/system/pom.xml
+++ b/system/pom.xml
@@ -24,7 +24,7 @@
 
         </dependency>
 
-        <!-- 集成mybatis -->
+        <!-- Integrate mybatis -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -33,6 +33,12 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <!-- DevTools -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
         </dependency>
     </dependencies>
 
