trace mybatis and check devtools by changing port number

--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=system
 server.servlet.context-path=/system
-server.port=9002
+server.port=9001
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
 
 #database connection
@@ -11,3 +11,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #Mapper path
 mybatis.mapper-locations=classpath:/mapper/*.xml
+#trace mybatis
+logging.level.com.mooc.system.mapper=trace
