--- a/system/pom.xml
+++ b/system/pom.xml
@@ -40,6 +40,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
+
+        <!-- server dependency -->
+        <dependency>
+            <groupId>com.mooc</groupId>
+            <artifactId>server</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
