--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>gateway</module>
         <module>server</module>
         <module>Business</module>
+        <module>generator</module>
     </modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
@@ -63,10 +64,18 @@
                 <version>1.2.10</version>
             </dependency>
 
+            <!--fastjson-->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>1.2.60</version>
+            </dependency>
+
+            <!-- template engine freemarker -->
+            <dependency>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>2.3.30</version>
             </dependency>
 		</dependencies>
 
