--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
                 <artifactId>freemarker</artifactId>
                 <version>2.3.30</version>
             </dependency>
+
+            <!-- get xml -->
+            <dependency>
+                <groupId>org.dom4j</groupId>
+                <artifactId>dom4j</artifactId>
+                <version>2.1.1</version>
+            </dependency>
 		</dependencies>
 
 
